project-10.html code completed

--- a/index.html
+++ b/index.html
@@ -405,6 +405,28 @@
               >
             </div>
           </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/ETL_image.png"
+                alt="ETL Covid Tracking"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Project 10: ETL: World Covid-19 Vaccinations</h3>
+              <p class="projects__row-content-desc">
+                Track COVID-19 vaccinations and manufactures used around the world using extract, transform, and load functionality.
+              </p>
+              <a
+                href="./project-10.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
           </div>
         </div>
       </div>
