--- a/project-10.html
+++ b/project-10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 9: Web Scraping: Missions to Mars </title>
+    <title>Case Study of Project 10: ETL: World Covid-19 Vaccinations </title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -84,14 +84,14 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 9: Web Scraping</h1>
+        <h1 class="heading-primary">Project 10: ETL</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Built a web application that scrapes varous websites for data related to the Missions to Mars and displays the information in a single HTML page. Using MongoDB with Flask, created a new HTML pag tha tdisplays all the information that scrated from the URLs in the latter task. 
+            Track COVID-19 vaccinations and manufactures used around the world using extract, transform, and load functionality. 
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://github.com/TanishaCooper/web-scraping-challenge" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://github.com/TanishaCooper/ETL_Case_Study" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -100,8 +100,8 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/python-pybank.png"
-              alt="Project 8 Image"
+              src="./assets/png/ETL_image.png"
+              alt="Project 10 Image"
               class="project-details__showcase-img"
             />
           </div>
@@ -109,18 +109,23 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                The analysis of PyBank's financial records used budget_data.csv financial data. The dataset composed of two columns: Date and Profit/Losses. The Python script analyzed the dataset and calculated the financial analysis with an output of a .txt file. 
+                Track COVID-19 vaccinations and manufactures used around the world using extract, transform, and load functionality.
               </p>
               <p class="project-details__desc-para">
-                PyPoll election analyzes a small, rural town voting process. The goal is to improve or modernize the voting process. PyPoll's datasets is pulled from election_data.csv. The latter is composed of three columns: Voter ID, County, and Candidate. The Python script will analyze the votes and calcuated election results into a .txt file. 
+                The momentum of the Covid-19 pandemic has tapered. There has been a push for people to get vaccinated prior to returning to high-risk jobs, visiting countries, and vacationing.
+                We wanted to understand Covid-19 vaccination around the world. According to each country's population, are people fully vaccinated? Which country has the highest fully vaccinated population per one hundred? What vaccination manufacturers are being used? Here we take a look at an analysis of COVID-19 vaccinations per country and the manufacturers they use.
+                We collected data from COVID-19 World Vaccination Progress and COVID-19 Ranking of Vaccinations and Manufactuers Used
+                We successfully was able to Extract, Transform, and Load our data to pgAdmin using connection. Below, we will provide detail insight on how we uploaded our data to the database to analyze the data.
               </p>
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
                 <div class="skills__skill">Python</div>
-                <div class="skills__skill">Statistics</div>
-                <div class="skills__skill">Intertools</div>
+                <div class="skills__skill">Numpy</div>
+                <div class="skills__skill">PostgreSQL</div>
+                <div class="skills__skill">Pandas</div>
+                <div class="skills__skill">Jupyter Notebook</div>
                 <div class="skills__skill">CSV</div>
                 <div class="skills__skill">Github</div>
                 <div class="skills__skill">GIT</div>
@@ -129,16 +134,16 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://github.com/TanishaCooper/web-scraping-challenge"
+                href="https://github.com/TanishaCooper/ETL_Case_Study"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/TanishaCooper/python-challenge/blob/main/PyPoll/main.py"
+                href="https://github.com/TanishaCooper/ETL_Case_Study/blob/None/covid_vaccinations_etl.ipynb"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Code (Python) Link</a
+                >Code Link</a
               >
             </div>
           </div>
